--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <meta content="Tab Clock" property="og:title">
     <meta content="itsmike613's version of clocktab.com" property="og:description">
     <meta content="https://itsmike613.github.io/TabClock/" property="og:url">
-    <meta content="https://github.com/itsmike613/TabClock/blob/main/Assets/Images/logo.png?raw=true" property="og:image">
+    <meta content="https://github.com/itsmike613/TabClock/blob/main/Source/Images/logo.png?raw=true" property="og:image">
     <meta content="#FDB813" data-react-helmet="true" name="theme-color">
 
     <!-- Tab -->
-    <link rel="icon" type="image/x-icon" href="Assets/Images/logo.png">
+    <link rel="icon" type="image/x-icon" href="Source/Images/logo.png">
     <title>Tab Clock</title>
 
     <!-- Styles -->
     <link rel="stylesheet" href="https://unpkg.com/@webpixels/css/dist/index.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css" />
-    <link rel="stylesheet" href="Assets/Styles/index.css">
+    <link rel="stylesheet" href="Source/Styles/index.css">
 
     <!-- Scripts -->
     <script src="https://unpkg.com/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -221,12 +221,12 @@
                             <label for="background-img" class="form-label small">Background Image</label>
                             <select class="form-select form-select-sm" id="background-img">
                                 <option value="None" selected>None</option>
-                                <option value="Assets/Images/Backgrounds/beach.jpg">Beach</option>
-                                <option value="Assets/Images/Backgrounds/marty.jpg">Marty</option>
-                                <option value="Assets/Images/Backgrounds/paper.jpg">Paper</option>
-                                <option value="Assets/Images/Backgrounds/patrick.jpg">Patrick</option>
-                                <option value="Assets/Images/Backgrounds/sunset.jpg">Sunset</option>
-                                <option value="Assets/Images/Backgrounds/rocks.jpg">Rocks</option>
+                                <option value="Source/Images/Backgrounds/beach.jpg">Beach</option>
+                                <option value="Source/Images/Backgrounds/marty.jpg">Marty</option>
+                                <option value="Source/Images/Backgrounds/paper.jpg">Paper</option>
+                                <option value="Source/Images/Backgrounds/patrick.jpg">Patrick</option>
+                                <option value="Source/Images/Backgrounds/sunset.jpg">Sunset</option>
+                                <option value="Source/Images/Backgrounds/rocks.jpg">Rocks</option>
                             </select>
                         </div>
                         <div class="w-100 mb-2">
@@ -287,7 +287,7 @@
         </div>
     </div>
 
-    <script src="Assets/Scripts/index.js"></script>
+    <script src="Source/Scripts/index.js"></script>
 </body>
 
 </html>
