--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                                 <option value="Bungee Inline">Bungee Inline</option>
                                 <option value="Bungee Outline">Bungee Outline</option>
                                 <option value="Bungee Shade">Bungee Shade</option>
+                                <option value="Baloo 2">Baloo 2</option>
                                 <option value="Cherry Bomb One">Cherry Bomb One</option>
                                 <option value="Coral Pixels">Coral Pixels</option>
                                 <option value="Doto">Doto</option>
