Undid font testing. Content addition

--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@
                                 <option value="Bungee Inline">Bungee Inline</option>
                                 <option value="Bungee Outline">Bungee Outline</option>
                                 <option value="Bungee Shade">Bungee Shade</option>
-                                <option value="Baloo 2">Baloo 2</option>
                                 <option value="Cherry Bomb One">Cherry Bomb One</option>
                                 <option value="Coral Pixels">Coral Pixels</option>
                                 <option value="Doto">Doto</option>
@@ -227,6 +226,8 @@
                                 <option value="Source/Images/Backgrounds/patrick.jpg">Patrick</option>
                                 <option value="Source/Images/Backgrounds/sunset.jpg">Sunset</option>
                                 <option value="Source/Images/Backgrounds/rocks.jpg">Rocks</option>
+                                <option value="Source/Images/Backgrounds/julian.jpg">Julian Alps</option>
+                                <option value="Source/Images/Backgrounds/spider.jpg">Spiderman</option>
                             </select>
                         </div>
                         <div class="w-100 mb-2">
