Minor adjustments and updated code going from Functions to Const Arrow Functions

--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                                 <option value="Source/Images/Backgrounds/patrick.jpg">Patrick</option>
                                 <option value="Source/Images/Backgrounds/sunset.jpg">Sunset</option>
                                 <option value="Source/Images/Backgrounds/rocks.jpg">Rocks</option>
-                                <option value="Source/Images/Backgrounds/julian.jpg">Julian Alps</option>
-                                <option value="Source/Images/Backgrounds/spider.jpg">Spiderman</option>
+                                <option value="Source/Images/Backgrounds/julian.jpg">Julian Alps [NEW!]</option>
+                                <option value="Source/Images/Backgrounds/spider.jpg">Spiderman [NEW!]</option>
                             </select>
                         </div>
                         <div class="w-100 mb-2">
