--- a/index.html
+++ b/index.html
@@ -221,13 +221,14 @@
                             <label for="bgim" class="form-label small">Background Image</label>
                             <select class="form-select form-select-sm" id="bgim">
                                 <option value="None" selected>None</option>
-                                <option value="Source/Images/Backgrounds/beach.jpg">Beach</option>
-                                <option value="Source/Images/Backgrounds/paper.jpg">Paper</option>
-                                <option value="Source/Images/Backgrounds/patrick.jpg">Patrick</option>
-                                <option value="Source/Images/Backgrounds/sunset.jpg">Sunset</option>
-                                <option value="Source/Images/Backgrounds/rocks.jpg">Rocks</option>
-                                <option value="Source/Images/Backgrounds/julian.jpg">Julian Alps [NEW!]</option>
-                                <option value="Source/Images/Backgrounds/spider.jpg">Spiderman [NEW!]</option>
+                                <option value="Source/Images/Backgrounds/beach.jpg">Beach (JPG)</option>
+                                <option value="Source/Images/Backgrounds/paper.jpg">Paper (JPG)</option>
+                                <option value="Source/Images/Backgrounds/patrick.jpg">Patrick (JPG)</option>
+                                <option value="Source/Images/Backgrounds/sunset.jpg">Sunset (JPG)</option>
+                                <option value="Source/Images/Backgrounds/rocks.jpg">Rocks (JPG)</option>
+                                <option value="Source/Images/Backgrounds/julian.jpg">Julian Alps (JPG) [NEW!]</option>
+                                <option value="Source/Images/Backgrounds/spider.jpg">Spiderman (JPG) [NEW!]</option>
+                                <option value="Source/Images/Backgrounds/city.gif">City (GIF) [NEW!]</option>
                             </select>
                         </div>
                         <div class="w-100 mb-2">
