--- a/index.html
+++ b/index.html
@@ -210,8 +210,12 @@
                             </select>
                         </div>
                         <div class="w-100 mb-2">
-                            <label for="text" class="form-label small">Text Color</label>
+                            <label for="text" class="form-label small">Time Text Color</label>
                             <input type="color" class="form-control form-control-sm" id="text">
+                        </div>
+                        <div class="w-100 mb-2">
+                            <label for="datecolor" class="form-label small">Date Text Color</label>
+                            <input type="color" class="form-control form-control-sm" id="daco">
                         </div>
                         <div class="w-100 mb-2">
                             <label for="back" class="form-label small">Background Color</label>
