--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
                             </select>
                         </div>
                         <div class="w-100 mb-2">
-                            <label for="text" class="form-label small">Time Text Color</label>
-                            <input type="color" class="form-control form-control-sm" id="text">
+                            <label for="tico" class="form-label small">Time Text Color</label>
+                            <input type="color" class="form-control form-control-sm" id="tico">
                         </div>
                         <div class="w-100 mb-2">
-                            <label for="datecolor" class="form-label small">Date Text Color</label>
+                            <label for="daco" class="form-label small">Date Text Color</label>
                             <input type="color" class="form-control form-control-sm" id="daco">
                         </div>
                         <div class="w-100 mb-2">
