Undid changes for now. Date color input naming issues.

--- a/index.html
+++ b/index.html
@@ -210,12 +210,8 @@
                             </select>
                         </div>
                         <div class="w-100 mb-2">
-                            <label for="tico" class="form-label small">Time Text Color</label>
-                            <input type="color" class="form-control form-control-sm" id="tico">
-                        </div>
-                        <div class="w-100 mb-2">
-                            <label for="daco" class="form-label small">Date Text Color</label>
-                            <input type="color" class="form-control form-control-sm" id="daco">
+                            <label for="text" class="form-label small">Text Color</label>
+                            <input type="color" class="form-control form-control-sm" id="text">
                         </div>
                         <div class="w-100 mb-2">
                             <label for="back" class="form-label small">Background Color</label>
