--- a/index.html
+++ b/index.html
@@ -284,6 +284,8 @@
 
                 <div class="settings-footer">
                     <button class="btn btn-primary btn-sm w-100" id="full">Fullscreen</button>
+                    <hr class="my-2">
+                    <a href="coff.ee/itsmike613" class="btn btn-info btn-sm w-100">Buy Me A Coffee</a>
                 </div>
             </div>
         </div>
