--- a/index.html
+++ b/index.html
@@ -283,9 +283,8 @@
                 </div>
 
                 <div class="settings-footer">
-                    <button class="btn btn-primary btn-sm w-100" id="full">Fullscreen</button>
-                    <hr class="my-2">
-                    <a href="coff.ee/itsmike613" class="btn btn-info btn-sm w-100">Buy Me A Coffee</a>
+                    <button class="btn btn-primary btn-sm w-100 mb-2" id="full">Fullscreen</button>
+                    <a href="coff.ee/itsmike613" target="_blank" class="btn btn-success btn-sm w-100">Buy Me A Coffee</a>
                 </div>
             </div>
         </div>
