--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
                 <div class="settings-footer">
                     <button class="btn btn-primary btn-sm w-100 mb-2" id="full">Fullscreen</button>
-                    <a href="coff.ee/itsmike613" target="_blank" class="btn btn-success btn-sm w-100">Buy Me A Coffee</a>
+                    <a href="https://coff.ee/itsmike613" target="_blank" class="btn btn-warning btn-sm w-100">Buy Me A Coffee</a>
                 </div>
             </div>
         </div>
