--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                         <div class="card my-2">
                                             <div class="table-responsive" style="max-height: 400px;">
                                                 <table class="table table-hover table-nowrap">
-                                                    <thead class="table-light">
+                                                    <thead class="table-light sticky-top">
                                                         <tr><th scope="col">Prefix</th><th scope="col">Example Output</th><th scope="col">Description</th></tr>
                                                     </thead>
                                                     <tbody>
