New branding. Phosphor clock icon placed on Webpixels Blue colored background, curved corners, and new Meta Content data for embedding color.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="itsmike613's version of clocktab.com" property="og:description">
     <meta content="https://itsmike613.github.io/TabClock/" property="og:url">
     <meta content="https://github.com/itsmike613/TabClock/blob/main/Source/Images/logo.png?raw=true" property="og:image">
-    <meta content="#FDB813" data-react-helmet="true" name="theme-color">
+    <meta content="#38A6F4" data-react-helmet="true" name="theme-color">
 
     <!-- Tab -->
     <link rel="icon" type="image/x-icon" href="Source/Images/logo.png">
