Updated, Added, and removed images. They are hopfully now of better quality, and more visually appealing ones. I renamed the Buy Me a Coffee button to just Donate. I added dividers between some images on the Background Image dropdown. I seperated it into 4-5 categories. Nature, Companies/characters, Paper, GIFs, and 5 categories if you consider the None option. Next I will create more themes.

--- a/index.html
+++ b/index.html
@@ -230,14 +230,20 @@
                             <label for="bgim" class="form-label small">Background Image</label>
                             <select class="form-select form-select-sm" id="bgim">
                                 <option value="None" selected>None</option>
-                                <option value="Source/Images/Backgrounds/beach.jpg">Beach (JPG)</option>
-                                <option value="Source/Images/Backgrounds/paper.jpg">Paper (JPG)</option>
+                                <option disabled>──────────</option>
+                                <option value="Source/Images/Backgrounds/beach.jpg">Beach (JPG) [UPDATED!]</option>
+                                <option value="Source/Images/Backgrounds/earth.jpg">Earth (JPG) [NEW!]</option>
+                                <option value="Source/Images/Backgrounds/palms.jpg">Palms (JPG) [NEW!]</option>
+                                <option disabled>──────────</option>
                                 <option value="Source/Images/Backgrounds/patrick.jpg">Patrick (JPG)</option>
-                                <option value="Source/Images/Backgrounds/sunset.jpg">Sunset (JPG)</option>
-                                <option value="Source/Images/Backgrounds/rocks.jpg">Rocks (JPG)</option>
-                                <option value="Source/Images/Backgrounds/julian.jpg">Julian Alps (JPG) [NEW!]</option>
-                                <option value="Source/Images/Backgrounds/spider.jpg">Spiderman (JPG) [NEW!]</option>
-                                <option value="Source/Images/Backgrounds/city.gif">City (GIF) [NEW!]</option>
+                                <option value="Source/Images/Backgrounds/spider.jpg">Spiderman (JPG)</option>
+                                <option value="Source/Images/Backgrounds/minecraft.jpg">Minecraft (JPG) [NEW!]</option>
+                                <option disabled>──────────</option>
+                                <option value="Source/Images/Backgrounds/graph.jpg">Graph Paper (JPG) [NEW!]</option>
+                                <option value="Source/Images/Backgrounds/blueprint.jpg">Blue Print (JPG) [NEW!]</option>
+                                <option disabled>──────────</option>
+                                <option value="Source/Images/Backgrounds/city.gif">City (GIF)</option>
+                                <option value="Source/Images/Backgrounds/rain.gif">Rain (GIF) [NEW!]</option>
                             </select>
                         </div>
                         <div class="w-100 mb-2">
@@ -293,7 +299,7 @@
 
                 <div class="settings-footer">
                     <button class="btn btn-primary btn-sm w-100 mb-2" id="full">Fullscreen</button>
-                    <a href="https://coff.ee/itsmike613" target="_blank" class="btn btn-warning btn-sm w-100">Buy Me A Coffee</a>
+                    <a href="https://coff.ee/itsmike613" target="_blank" class="btn btn-warning btn-sm w-100">Donate</a>
                 </div>
             </div>
         </div>
