I added a new Date Template, I am thinking of renaming it to the Subtitle feature. Expanding it for classrooms. I hope that the formatting wont mess up the message. We will see.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
                                 <option value="WW week of YYYY">23 week of 2025</option>
                                 <option value="mm/DD/YYYY">06/02/2025</option>
                                 <option value="m/D/YY">6/2/25</option>
+                                <option disabled>──────────</option>
+                                <option value="Good morning class!">Good morning class!</option>
                             </select>
                         </div>
 
