HTML tags, aren't allowed in <option>'s. Reset back to the original

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <label class="form-label small">Date Templates</label>
                             <select class="form-select form-select-sm" onchange="const input = document.getElementById('dtin');input.value = this.value;input.dispatchEvent(new Event('input', { bubbles: true }));">
                                 <option value="" selected disabled>Select one</option>
-                                <option value="W, M Do YYYY">Monday, Jun 2nd 2025 <span class="badge bg-info-subtle text-info border border-info-subtle rounded-pill ms-2">Default</span></option>
+                                <option value="W, M Do YYYY">Monday, Jun 2nd 2025 (default)</option>
                                 <option value="DDDo day of YYYY">154th day of 2025</option>
                                 <option value="WWo week of YYYY">23rd week of 2025</option>
                                 <option value="mm/DD/YYYY">06/02/2025</option>
