Date Help Menu Addition with "WWo" from yesterdays update.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                                                         <tr><td class="text-heading fw-bold">W</td><td>Friday</td><td>Full weekday name</td></tr>
                                                         <tr><td class="text-heading fw-bold">w</td><td>Fri</td><td>Weekday abbreviation</td></tr>
                                                         <tr><td class="text-heading fw-bold">WW</td><td>27</td><td>ISO week number of the year</td></tr>
+                                                        <tr><td class="text-heading fw-bold">WWo</td><td>27th</td><td>ISO week number of the year with ordinal</td></tr>
                                                         <tr><td class="text-heading fw-bold">Q</td><td>3</td><td>Quarter number</td></tr>
                                                         <tr><td class="text-heading fw-bold">Qo</td><td>3rd</td><td>Quarter with ordinal</td></tr>
                                                     </tbody>
